--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -18,7 +18,7 @@ menu_settings:
       url: '/contact'
 
 footer_settings:
-  footer_tagline: Welcome to "Foodioso" - a blog where I share my culinary journey through life. Discover the amazing and not-so-great foods and meals I've encountered along the way. From mouth-watering dishes to surprising flops, join me as I recount my experiences with vivid descriptions that let your imagination savor every bite. Dive into my food adventures, where every post is a flavorful story waiting to be told. 
+  footer_tagline: 
 
 grid_settings:
   overlay_opacity: 0.8
@@ -64,17 +64,17 @@ color_settings:
   background_alt_color: '#f4f5f6'
   text_dark_color: '#2A2F36'
   text_medium_color: '#6C7A89'
-  text_light_color: '#ABB7B7'
+  text_light_color: '#ffffff'
   accent_color: '#4ecdc4'
   border_color: '#dddddd'
   overlay_background_color: '#6C7A89'
-  overlay_text_color: '#ffffff'
-  overlay_accent_color: '#2A2F36'
+  overlay_text_color: '#dddddd'
+  overlay_accent_color: '#4ecdc4'
   error_color: '#D64541'
 
 font_settings:
-  font_embed: '<link href="https://fonts.googleapis.com/css2?family=Alex+Brush&family=Poppins:wght@300;500&family=Roboto:wght@400;700&display=swap" rel="stylesheet">'
-  title_font: '"Alex Brush", cursive'
+  font_embed: '<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;500&family=Poppins:wght@300;500&family=Roboto:wght@400;700&display=swap" rel="stylesheet">'
+  title_font: '"Josefin Sans", sans-serif'
   body_font: '"Roboto", sans-serif'
   regular_weight: 400
   bold_weight: 700
@@ -82,7 +82,7 @@ font_settings:
     small_size: 22
     medium_size: 26
     large_size: 30
-    weight: 400  # Alex Brush has only one weight
+    weight: 400  
     letter_spacing: -0.02
   menu:
     small_size: 30
